# dcnet_progress

./: .gitignore  CODEBASE.md  README.md  pyproject.toml
dcnet_progress/: engine.py  hooks.py  migrate.py  modules.txt  notifications.py  permissions.py
dcnet_progress/api/: dashboard.py  definition.py  run.py
dcnet_progress/templates/: admin_contract_approval.json  admin_document_sign.json  admin_meeting_request.json  dcnet_incident_response.json  dcnet_service_activation.json  finance_invoice_approval.json  finance_payment_approval.json  finance_purchase_request.json  general_2level_approval.json  general_review_process.json  general_task_approval.json  hr_expense_claim.json  hr_leave_request.json  hr_overtime.json  hr_recruitment.json  hr_training_request.json  it_asset_request.json  it_change_request.json  it_support_ticket.json  sales_customer_onboarding.json  sales_quote_approval.json
dcnet_progress/www/: process.html  process.py
docs/: CODEBASE.md  CODEBASE_DETAIL.md
docs/specs/: 2026-04-12-dcnet-progress-design.md  2026-04-12-dcnet-progress-phase2-design.md  2026-04-13-dcnet-progress-form-builder.md
frontend/: index.html  package.json  proxyOptions.js  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/pages/: DashboardPage.tsx  DesignerPage.tsx  MyTasksPage.tsx  ProcessDesignerPage.tsx  ProcessListPage.tsx  ReportsPage.tsx  RunDetailPage.tsx  RunInboxPage.tsx  RunListPage.tsx  SettingsPage.tsx
frontend/src/utils/: slug.ts
(+25 files in other folders)
