[project]
name = "dcnet_progress"
authors = [
    { name = "DCNet", email = "admin@dcnet.vn" }
]
description = "Business Process Management for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0"

[tool.bench.assets]
build_dir = "./frontend"
out_dir = "../dcnet_progress/public/frontend"
index_html_path = "../dcnet_progress/www/process.html"
